Added code for more requirements,but it is not yet fully working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <div class="container"></div>
 <div class="results"></div>
 
+<h1 Initials and Scores ></h1>
+
+<div class="scores"></div>
+
 <script src="./assets/js/app.js"></script>
 
 
